building the foundations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
 [package]
 name = "v3ctr"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bevy = "0.15.3"
