--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,30 @@
+[workspace]
+members = ["v3ctr","components"]
+resolver ="2"
+
 [profile.dev]
 opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
 
+
+
 [package]
-name = "v3ctr"
+name = "v3ctr-desktop"
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
 bevy = "0.15.3"
+bevy_dylib = "0.15.3"
+hot-lib-reloader = "0.7.0"
+v3ctr= { path="v3ctr"}
+components = { path="components"}
+
+[features]
+reload = []
+dynamic = ["bevy/dynamic_linking"]
+
+
