tried to find workaround for enum mismatch caused be dynamic linking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ edition = "2021"
 
 
 [dependencies]
-bevy = "0.15.3"
+bevy ={ version = "0.15.3", features = ["dynamic_linking"]}
 bevy_dylib = "0.15.3"
 hot-lib-reloader = "0.7.0"
 v3ctr= { path="v3ctr"}
