--- a/v3ctr/Cargo.toml
+++ b/v3ctr/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["rlib", "dylib"]
 
 
 [dependencies]
-bevy = "0.15.3"
+bevy ={ version = "0.15.3", features = ["dynamic_linking"]}
 bevy_dylib = "0.15.3"
 components = { path = "../components" }
 
